<?xml version="1.0"?>
<package format="2">
  <name>rrt_star_global_planner</name>
  <version>0.0.0</version>
  <description>The rrt_star_global_planner package</description>

  <maintainer email="rafael@todo.todo">rafael</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!--  -->
  <build_depend>roscpp</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!--  -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>cmake_modules</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
    <!--  -->
    <nav_core plugin="${prefix}/rrt_star_planner_plugin.xml"/>
  </export>
</package>
